fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -443,7 +443,7 @@ input, select, textarea {
   }
 
   .filter_label{
-	  margin: 1em 0 2 0;
+	  margin: 1em 0 0.5em 0;
   }
 
   .filter{
